kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api-service
spec:
  selector:
    app: customer-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer  # This will give you external IP directly
